<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbar_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/header_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/side_borders"
            android:layout_marginTop="@dimen/top_border"
            android:fontFamily="@font/roboto_bold"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/popular_title" />

        <ImageButton
            android:id="@+id/search_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="@null"
            android:contentDescription="@string/search_image_button"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_baseline_search_24"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/header_text_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/header_text_view"
            tools:ignore="TouchTargetSizeCheck" />

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/side_borders"
            android:background="@null"
            android:contentDescription="@string/back_search_button"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/search_edit_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/search_edit_text"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/search_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="@dimen/top_border"
            android:layout_marginEnd="@dimen/side_borders"
            android:hint="@string/search_edit_text"
            android:visibility="gone"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/back_button"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TouchTargetSizeCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/side_borders"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation_constraint_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_constraint_layout">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_marginTop="24dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible" />

        <ImageView
            android:id="@+id/data_loading_error_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/data_loading_error"
            android:src="@drawable/ic_baseline_cloud_off_24"
            android:visibility="gone" />

        <TextView
            android:id="@+id/data_loading_error_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="14dp"
            android:gravity="center"
            android:text="@string/data_loading_error"
            android:textColor="@color/aqua"
            android:visibility="gone" />

        <Button
            android:id="@+id/repeat_button"
            android:layout_width="124dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:background="@drawable/bg_button"
            android:backgroundTint="@color/aqua"
            android:text="@string/repeat_button"
            android:textColor="@color/white"
            android:visibility="visible" />

        <Button
            android:id="@+id/not_found_search"
            android:layout_width="124dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:background="@drawable/bg_button"
            android:backgroundTint="@color/aqua"
            android:enabled="false"
            android:text="@string/not_found_search"
            android:textColor="@color/white"
            android:visibility="gone" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottom_navigation_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="6dp"
        android:layout_marginHorizontal="@dimen/side_borders"
        android:layout_marginBottom="@dimen/bottom_border"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/popular_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="14dp"
            android:background="@drawable/bg_button"
            android:backgroundTint="@color/blue_alice"
            android:text="@string/popular_button"
            android:textAllCaps="false"
            android:textColor="@color/aqua"
            app:layout_constraintEnd_toStartOf="@+id/favorites_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/favorites_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button"
            android:backgroundTint="@color/aqua"
            android:text="@string/favorites_button"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/popular_button"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>